--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exam-system",
+  "name": "exam-point",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -45,6 +45,7 @@
     "cmdk": "^0.2.1",
     "date-fns": "^2.30.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.16.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.263.1",
     "mammoth": "^1.9.1",
