--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "cmdk": "^0.2.1",
     "date-fns": "^2.30.0",
     "embla-carousel-react": "^8.6.0",
-    "framer-motion": "^12.16.0",
+    "framer-motion": "^12.23.6",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.263.1",
     "mammoth": "^1.9.1",
@@ -57,6 +57,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.57.0",
+    "react-motion": "^0.5.2",
     "react-resizable-panels": "^0.0.55",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.3",
